[gd_scene load_steps=10 format=3 uid="uid://cf280j4furphc"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_2x1nn"]
[ext_resource type="Texture2D" uid="uid://bij2sqyujw7mp" path="res://assets/sprites/slime_green.png" id="1_d4ofm"]
[ext_resource type="PackedScene" uid="uid://dn7u8rr27kwbc" path="res://scenes/killzone.tscn" id="2_20y2m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_imfdv"]
atlas = ExtResource("1_d4ofm")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgqdn"]
atlas = ExtResource("1_d4ofm")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_isbth"]
atlas = ExtResource("1_d4ofm")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1k0n2"]
atlas = ExtResource("1_d4ofm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_j801j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imfdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgqdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isbth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1k0n2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umkyw"]
size = Vector2(8, 14)

[node name="slime" type="Node2D"]
script = ExtResource("1_2x1nn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_j801j")
autoplay = "default"
frame_progress = 0.971813

[node name="killzone" parent="." instance=ExtResource("2_20y2m")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_umkyw")

[node name="RaycastRight" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(13, 0)

[node name="RaycastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-13, 0)

[node name="RaycastDown" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(0, 13)

[connection signal="body_entered" from="killzone" to="." method="_on_killzone_body_entered"]
